# dnf5

./: CMakeLists.txt
dnf5-plugins/: CMakeLists.txt
dnf5-plugins/repo_snapshot_plugin/: CMakeLists.txt  repo_snapshot_cmd_plugin.cpp
include/libdnf5/rpm/: package.hpp
libdnf5-plugins/: CMakeLists.txt
libdnf5-plugins/repo_snapshot/: CMakeLists.txt  repo_snapshot.conf  repo_snapshot.cpp
libdnf5/rpm/: package.cpp
